--- a/experience.html
+++ b/experience.html
@@ -20,6 +20,13 @@
 <h1>Experience</h1>
                   
 <div id = "element">
+  
+<h2 style = "text-align: center"></h2>
+<b>Teaching Assistant (Data Structures and Algorithms, Discrete Math and Functional Programming, Intro to CS-Python)</b>
+<p> Grade problem sets and supervise 3-hour weekly labs on Java, Python, Emacs, and LaTeX. 
+  Lead mentor sessions 4+ hours each week to help students with problem sets and exam preparation. 
+  Adapt teaching strategies with faculty approval as student needs evolve throughout semester
+<br>
 
 <h2 style = "text-align: center"></h2>
 <b> PriceWaterhouseCoopers CO </b>
@@ -30,40 +37,23 @@
 
 <h2 style = "text-align: center"></h2>
 <b> Girls Rock Math </b>
-<p> I spent my summer after my freshman year of college working for Girls Rock Math, a math camp for 5-11 year old girls where they learn math and do math related art 
-  projects. My role was as a Site Director, where I supervised recess, worked one on one with struggling kids, made sure all the materials were ready for each camp day, manage
-  the volunteer high school counselors, and to substitue for the camp teacher. 
+<p> Supervised elementary-middle school aged girls at summer math camp and directed volunteer high school counselors 
+  in day-to-day responsibilities. Led 40+ high school camp counselors in leadership training and twice a week meetings 
+  for counselors and teachers to reflect and plan.
 <br>
-  
-<h2 style = "text-align: center"></h2>
-<b> Introduction to CS: Teacher's Assistant </b>
-<p> This semester I am working as a Teacher's Assistant for Introduction to Computer Science - Python. As a TA, I attend the labs where I help the students
-  troubleshoot code, hold a weekly mentor hour where students can get help with understanding the material, and assist the professors with grading assignments. 
-<br>
-  
-<h2 style = "text-align: center"></h2>
-<b> US Census Bureau </b>
-<p> Last summer, I worked as an Enumerator for the US Census Bureau. I walked door to door in various neighborhoods in Seattle to collect Census data for those who
-  had not yet filled out the Census survery for the year.
-<br>
+
   
  <h2 style = "text-align: center"></h2>
 <b> Donor Experience Specialist </b>
 <p> Last spring, I volunteered with Bloodworks Northwest as a Donor Experience Specialist. I supervised and assisted the donors after they gave blood, and assured they were
   safe and healthy. 
 <br>
-  
- <h2 style = "text-align: center"></h2>
-<b> Dental Assisting </b>
-<p> Last summer, I worked as a Dental Assistant at Snoqualmie Family Dentistry. As an assistant, I sterilized tools, cleaned the rooms, welcomed patients, and aided the office
-  manager with paperwork. 
-<br>
-  
+ 
 
 <h2 style = "text-align: center"></h2>
 <b> Seattle Youth Symhony Orchestra </b>
-<p> I was a member of the Seattle Youth Symphony Orhcestra from 2014 to 2020. In SYSO I got the incredible opportunity to play with French Horn players from the Seattle 
-  Symphony as well as play amazing music. I am now playing in the Pomona College Orchestra.
+<p>Played the French Horn in the Seattle Youth Symphony Orhcestra from 2014 to 2020. In SYSO I got the incredible opportunity to play with professional players from the Seattle 
+  Symphony as well as play amazing music. I continue to play the French Horn in the Pomona College Orchestra.
 <br>
 
 
