--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Jonathan Doe | Web Designer, Director | name@yourdomain.com</title>
+	<title>Sophia Ristuben sara2020@mymail.pomona.edu</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<meta name="keywords" content="" />
@@ -21,14 +21,14 @@
 			<div class="yui-gc">
 				<div class="yui-u first">
 					<h1>Jonathan Doe</h1>
-					<h2>Web Designer, Director</h2>
+					<h2>githublink</h2>
+					<h2>linkedlin</h2>
 				</div>
 
 				<div class="yui-u">
 					<div class="contact-info">
 						<h3><a id="pdf" href="#">Download PDF</a></h3>
-						<h3><a href="mailto:name@yourdomain.com">name@yourdomain.com</a></h3>
-						<h3>(313) - 867-5309</h3>
+						<h3><a href="mailto:sara2020@mymail.pomona.edu">sara2020@mymail.pomona.edu</a></h3>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -38,7 +38,7 @@
 			<div id="yui-main">
 				<div class="yui-b">
 
-					<div class="yui-gf">
+					/*<div class="yui-gf">
 						<div class="yui-u first">
 							<h2>Profile</h2>
 						</div>
@@ -47,30 +47,30 @@
 								Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change. 
 							</p>
 						</div>
-					</div><!--// .yui-gf -->
+					</div><!--// .yui-gf -->*/
 
 					<div class="yui-gf">
 						<div class="yui-u first">
 							<h2>Skills</h2>
 						</div>
-						<div class="yui-u">
+						/***<div class="yui-u">
 
 								<div class="talent">
-									<h2>Web Design</h2>
-									<p>Assertively exploit wireless initiatives rather than synergistic core competencies.	</p>
+									/*<h2>Web Design</h2>*/
+									<p>Java, Python, HTML, Coq, Alteryx, Power BI, Excel, LaTex </p>
 								</div>
 
-								<div class="talent">
-									<h2>Interface Design</h2>
+								/*<div class="talent">
+									/*<h2>Interface Design</h2>*/
 									<p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p>
 								</div>
 
 								<div class="talent">
-									<h2>Project Direction</h2>
+									/*<h2>Project Direction</h2>*/
 									<p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
-								</div>
+								</div>*/
 						</div>
-					</div><!--// .yui-gf -->
+					</div><!--// .yui-gf -->***/
 
 					<div class="yui-gf">
 						<div class="yui-u first">
@@ -78,22 +78,15 @@
 						</div>
 						<div class="yui-u">
 							<ul class="talent">
-								<li>XHTML</li>
+								<li>Java</li>
+								<li>Python</li>
 								<li>CSS</li>
+								<li>HTML</li>
+								<li>Alteryx</li>
+								<li>LaTeX</li>
 								<li class="last">Javascript</li>
 							</ul>
 
-							<ul class="talent">
-								<li>Jquery</li>
-								<li>PHP</li>
-								<li class="last">CVS / Subversion</li>
-							</ul>
-
-							<ul class="talent">
-								<li>OS X</li>
-								<li>Windows XP/Vista</li>
-								<li class="last">Linux</li>
-							</ul>
 						</div>
 					</div><!--// .yui-gf-->
 
@@ -104,35 +97,32 @@
 						</div><!--// .yui-u -->
 
 						<div class="yui-u">
-
 							<div class="job">
-								<h2>Facebook</h2>
-								<h3>Senior Interface Designer</h3>
-								<h4>2005-2007</h4>
-								<p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence. </p>
+								<h2>Pomona College Computer Science Department</h2>
+								<h3>Teaching Assistant</h3>
+								<h4>Aug 2021 - Present</h4>
+								<p>Grade problem sets and supervise 3-hour weekly labs on Java, Python, Emacs, and LaTeX. Lead mentor sessions 4+ hours each week to help students with problem sets and exam preparation. Adapt teaching strategies with faculty approval as student needs evolve throughout semester
+								</p>
 							</div>
 
 							<div class="job">
-								<h2>Apple Inc.</h2>
-								<h3>Senior Interface Designer</h3>
-								<h4>2005-2007</h4>
-								<p>Progressively reconceptualize multifunctional "outside the box" thinking through inexpensive methods of empowerment. Compellingly morph extensive niche markets with mission-critical ideas. Phosfluorescently deliver bricks-and-clicks strategic theme areas rather than scalable benefits. </p>
-							</div>
-
-							<div class="job">
-								<h2>Microsoft</h2>
-								<h3>Principal and Creative Lead</h3>
-								<h4>2004-2005</h4>
-								<p>Intrinsicly transform flexible manufactured products without excellent intellectual capital. Energistically evisculate orthogonal architectures through covalent action items. Assertively incentivize sticky platforms without synergistic materials. </p>
+								<h2>PricewaterhouseCoopers</h2>
+								<h3>Consulting Solutions Start Intern</h3>
+								<h4>Jun 2022 - Aug 2022</h4>
+								<p>Leveraged Alteryx to diagnose gaps in user retention and develop data-driven strategies to boost engagement. Advised client to consolidate user profile descriptors to better connect users with one another on platform. Generated visualizations on PowerBI to capture and illustrate user-relevant trends for four-person team and project leaders.
+								</p>
 							</div>
 
 
 							<div class="job last">
-								<h2>International Business Machines (IBM)</h2>
-								<h3>Lead Web Designer</h3>
-								<h4>2001-2004</h4>
-								<p>Globally re-engineer cross-media schemas through viral methods of empowerment. Proactively grow long-term high-impact human capital and highly efficient innovation. Intrinsicly iterate excellent e-tailers with timely e-markets.</p>
+								<h2>Girls Rock Math</h2>
+								<h3>Site Director</h3>
+								<h4>Jun 2021 - Aug 2021</h4>
+								<p> Supervised elementary-middle school aged girls at summer math camp and directed volunteer high school counselors in day-to-day responsibilities. Led 40+ high school camp counselors in leadership training and twice a week meetings for counselors and teachers to reflect and plan.
+								</p>
 							</div>
+
+
 
 						</div><!--// .yui-u -->
 					</div><!--// .yui-gf -->
@@ -143,8 +133,8 @@
 							<h2>Education</h2>
 						</div>
 						<div class="yui-u">
-							<h2>Indiana University - Bloomington, Indiana</h2>
-							<h3>Dual Major, Economics and English &mdash; <strong>4.0 GPA</strong> </h3>
+							<h2>Pomona College - Claremont, California</h2>
+							<h3>Bachelor of Arts, Computer Science &mdash; <strong>3.97 GPA</strong> </h3>
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -154,7 +144,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
+			<p>Sophia Ristuben &mdash; <a href="sara2020@mymail.pomona.edu">sara2020@mymail.pomona.edu</a> </p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
