--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Sophia Ristuben sara2020@mymail.pomona.edu</title>
+	<title>Sophia Ristuben</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<meta name="keywords" content="" />
@@ -20,7 +20,7 @@
 		<div id="hd">
 			<div class="yui-gc">
 				<div class="yui-u first">
-					<h1>Jonathan Doe</h1>
+					<h1>Sophia Ristuben</h1>
 					<h2>githublink</h2>
 					<h2>linkedlin</h2>
 				</div>
@@ -28,6 +28,7 @@
 				<div class="yui-u">
 					<div class="contact-info">
 						<h3><a id="pdf" href="#">Download PDF</a></h3>
+						<br>
 						<h3><a href="mailto:sara2020@mymail.pomona.edu">sara2020@mymail.pomona.edu</a></h3>
 					</div><!--// .contact-info -->
 				</div>
