--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
+	
+
+
+<ul class = tabs>
+  <li><a href = index.html> Home </a></li>
+  <li><a href = about.html> About </a></li>
+  <li><a href = experience.html> Experience </a></li>
+  <li><a href = contact.html> Contact </a></li>
+  <li><a href = resume.html> Resume </a></li>
+</ul>
 
 	<title>Sophia Ristuben</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
