--- a/resume.html
+++ b/resume.html
@@ -64,6 +64,19 @@
 						<div class="yui-u first">
 							<h2>Skills</h2>
 						</div>
+						
+						<div class="yui-u">
+							<ul class="talent">
+								<li>Java</li>
+								<li>Python</li>
+								<li>CSS</li>
+								<li>HTML</li>
+								<li>Alteryx</li>
+								<li>LaTeX</li>
+								<li class="last">Javascript</li>
+							</ul>
+
+						</div>
 
 
 					<div class="yui-gf">
