--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,7 @@
 	<meta name="description" content="" />
 
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
+	<link href = "https://fonts.googleapis.com/css?family=Comfortaa" rel = 'stylesheet'>
 	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
 
 </head>
