--- a/resume.html
+++ b/resume.html
@@ -63,8 +63,9 @@
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Technical</h2>
+							<h2>Skills</h2>
 						</div>
+
 						<div class="yui-u">
 							<ul class="talent">
 								<li>Java</li>
