--- a/resume.html
+++ b/resume.html
@@ -34,6 +34,8 @@
 					<h1>Sophia Ristuben</h1>
 					<h2>githublink</h2>
 					<h2>linkedlin</h2>
+					<h2><a href="https://www.linkedin.com/in/sophiaristuben/">Linkedin</a></h2>
+					<a href="https://github.com/sophiaristuben">Github</a>
 				</div>
 
 				<div class="yui-u">
