--- a/resume.html
+++ b/resume.html
@@ -32,10 +32,8 @@
 			<div class="yui-gc">
 				<div class="yui-u first">
 					<h1>Sophia Ristuben</h1>
-					<h2>githublink</h2>
-					<h2>linkedlin</h2>
 					<h2><a href="https://www.linkedin.com/in/sophiaristuben/">Linkedin</a></h2>
-					<a href="https://github.com/sophiaristuben">Github</a>
+					<h2><a href="https://github.com/sophiaristuben">Github</a></h2>
 				</div>
 
 				<div class="yui-u">
