--- a/resume.html
+++ b/resume.html
@@ -65,6 +65,11 @@
 						<div class="yui-u first">
 							<h2>Skills</h2>
 						</div>
+						<ul>
+						  <li>Java</li>
+						  <li>Python</li>
+						  <li>HTML</li>
+						</ul>
 										
 
 						<div class="yui-u">
