--- a/resume.html
+++ b/resume.html
@@ -66,18 +66,12 @@
 							<h2>Skills</h2>
 						</div>
 						<ul>
-						  <li>Java</li>
-						  <li>Python</li>
-						  <li>HTML</li>
+						  <li>Java</li><br>
+						  <li>Python</li><br>
+						  <li>HTML</li><br>
 						</ul>
 										
 
-						<div class="yui-u">
-							<div class="talent">
-							<li>Java, Python, HTML, Coq, Alteryx, Power BI, Excel, LaTex </li>
-							</div>
-
-						</div>
 					</div><!--// .yui-gf-->
 
 					<div class="yui-gf">
