--- a/resume.html
+++ b/resume.html
@@ -66,9 +66,16 @@
 							<h2>Skills</h2>
 						</div>
 						<ul>
-						  <li>Java</li><br>
-						  <li>Python</li><br>
-						  <li>HTML</li><br>
+						  <li>Java</li>
+						  <li>Python</li>
+						  <li>HTML</li>
+							<li>Coq</li>
+							<li>Alteryx</li>
+							<li>Power BI</li>
+							<li>Excel</li>
+							<li>LaTeX</li>
+							
+
 						</ul>
 										
 
