--- a/resume.html
+++ b/resume.html
@@ -65,21 +65,19 @@
 						<div class="yui-u first">
 							<h2>Skills</h2>
 						</div>
-						<ul>
-						  <li>Java</li>
-						  <li>Python</li>
-						  <li>HTML</li>
-							<li>Coq</li>
-							<li>Alteryx</li>
-							<li>Power BI</li>
-							<li>Excel</li>
-							<li>LaTeX</li>
-							
 
-						</ul>
-										
+						<div class="yui-u">
+							<ul class="talent">
+								<li>Java</li>
+								<li>Python</li>
+								<li>CSS</li>
+								<li>HTML</li>
+								<li>Alteryx</li>
+								<li>Coq</li>
+								<li class="last">LaTeX</li>
+							</ul>
 
-					</div><!--// .yui-gf-->
+						</div>
 
 					<div class="yui-gf">
 	
