--- a/experience.html
+++ b/experience.html
@@ -22,6 +22,7 @@
   
 <h2 style = "text-align: center"></h2>
 <b>Teaching Assistant (Data Structures and Algorithms, Discrete Math and Functional Programming, Intro to CS-Python)</b>
+<h3>Aug 2021 - Present</h3>
 <p> Grade problem sets and supervise 3-hour weekly labs on Java, Python, Emacs, and LaTeX. 
   Lead mentor sessions 4+ hours each week to help students with problem sets and exam preparation. 
   Adapt teaching strategies with faculty approval as student needs evolve throughout semester
